finish the enemy and boss